Fix alignment in search form

--- a/app/assets/stylesheets/widgets/jquery.antcat.reference_picker.sass
+++ b/app/assets/stylesheets/widgets/jquery.antcat.reference_picker.sass
@@ -20,7 +20,7 @@ $antcat_reference_picker_gutter_size: 20px
     background: $antcat_reference_picker_color_form_background
     padding-bottom: 3px
     padding-left: 2px
-    height: 22px
+    height: 23px
 
     .throbber
       width: $antcat_reference_picker_gutter_size
@@ -75,8 +75,7 @@ $antcat_reference_picker_gutter_size: 20px
     .current_reference
       display: none
     .ok_cancel_controls
-      display: none
+      display: none !important
     .search_controls
-      float: left
       button.close
         display: inline
